[gd_scene load_steps=13 format=2]

[ext_resource path="res://Prefabs/Enemies/Mobs/GroundSpinner/Spinner.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/Enemies/Mobs/GroundSpinner/spinnerHalf_spin.png" type="Texture" id=2]
[ext_resource path="res://Prefabs/Enemies/Mobs/GroundSpinner/spinnerHalf.png" type="Texture" id=3]
[ext_resource path="res://Prefabs/Enemies/Mobs/GroundSpinner/spinnerHalf_dead.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "fast_spin",
"speed": 20.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "slow_spin",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 28, 11 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 31, 15 )

[sub_resource type="RayShape2D" id=4]
length = -200.0

[sub_resource type="RayShape2D" id=8]
length = 200.0

[sub_resource type="Animation" id=10]
resource_name = "Chase"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.0156863, 0.0156863, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("KinematicBody2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "dead" ]
}

[sub_resource type="Animation" id=5]
resource_name = "Enraged"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "slow_spin", "fast_spin" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/AnimatedSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 1.501 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.0156863, 0.0156863, 1 ), Color( 1, 0.0156863, 0.0156863, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("KinematicBody2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="RayShape2D" id=9]
length = 300.0

[node name="SpinnerHorizontal" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 16
collision_mask = 4
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
frames = SubResource( 1 )
animation = "slow_spin"

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, -1 )
shape = SubResource( 6 )

[node name="HurtBox" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/HurtBox"]
visible = false
shape = SubResource( 7 )

[node name="DetectionBox" type="Area2D" parent="KinematicBody2D"]

[node name="Detector" type="CollisionShape2D" parent="KinematicBody2D/DetectionBox"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="DetectionBox2" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/DetectionBox2"]
position = Vector2( 27, -1 )
rotation = 4.27606
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D"]
root_node = NodePath("../..")
anims/Chase = SubResource( 10 )
anims/Enraged = SubResource( 5 )

[node name="PointsDetector" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/PointsDetector"]
position = Vector2( -31, 14 )
rotation = 3.14159
shape = SubResource( 9 )

[connection signal="area_entered" from="KinematicBody2D/HurtBox" to="KinematicBody2D" method="_on_HurtBox_area_entered"]
[connection signal="area_entered" from="KinematicBody2D/DetectionBox" to="KinematicBody2D" method="_on_DetectionBox_area_entered"]
[connection signal="area_entered" from="KinematicBody2D/DetectionBox2" to="KinematicBody2D" method="_on_DetectionBox_area_entered"]
[connection signal="area_entered" from="KinematicBody2D/PointsDetector" to="KinematicBody2D" method="_on_PointsDetector_area_entered"]
